import json lib

--- a/awesome-playground/src/main/twirl/layouts/default.scala.html
+++ b/awesome-playground/src/main/twirl/layouts/default.scala.html
@@ -1,10 +1,10 @@
 @(title: String, headline: String)(body: Html)
-<html>
+<html lang="en">
   <head>
     <title>@title</title>
   </head>
   <body>
     <h1>@headline</h1>
-    @body
+    <section id="root">@body</section>
   </body>
 </html>
